--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: golang:1.13.1
 
 stages:
   - test
+  - metrics
   - build
 
 before_script:
@@ -21,9 +22,12 @@ unit_tests:
     - go test -coverprofile coverage.cov ./...
 
 code_coverage:
-  stage: test
+  stage: metrics
   script:
     - go tool cover -html=coverage.cov -o coverage.html
+  artifacts:
+    paths:
+      - coverage.html
 
 build:
   stage: build
