--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ code_coverage:
   stage: metrics
   script:
     - go tool cover -html=coverage.cov -o coverage.html
+    - go test $(go list ./... | grep -v /vendor/) -v -coverprofile .testCoverage.txt
   artifacts:
     paths:
       - coverage.html
