--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,14 +33,11 @@ jobs:
       run: |
         wget https://github.com/protocolbuffers/protobuf/releases/download/v3.11.4/protoc-3.11.4-linux-x86_64.zip
         unzip protoc-3.11.4-linux-x86_64.zip -d protoc
-        PATH=$PATH:$(pwd)/protoc/bin
-        echo $PATH
+        
     - name: Generate Proto
       run: |
-        pwd
-        ls
-        protoc --proto_path=proto --go_out=plugins=grpc:proto commands/commands.proto
-        protoc --proto_path=proto --go_out=plugins=grpc:proto files/files.proto
+        ./protoc/bin/protoc --proto_path=proto --go_out=plugins=grpc:proto commands/commands.proto
+        ./protoc/bin/protoc --proto_path=proto --go_out=plugins=grpc:proto files/files.proto
 
     - name: Build
       run: go build -v .
