--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,6 +33,7 @@ jobs:
       run: |
         wget https://github.com/protocolbuffers/protobuf/releases/download/v3.11.4/protoc-3.11.4-linux-x86_64.zip
         unzip protoc-3.11.4-linux-x86_64.zip -d protoc
+        go get -u github.com/golang/protobuf/protoc-gen-go
         
     - name: Generate Proto
       run: |
