--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,15 +32,15 @@ jobs:
     - name: Get protobuf
       run: |
         wget https://github.com/protocolbuffers/protobuf/releases/download/v3.11.4/protoc-3.11.4-linux-x86_64.zip
-        unzip protoc-3.11.4-linux-x86_64.zip -d protoc
-        echo "::add-path::$(pwd)/protoc/bin"
-        chmod +x ./protoc/bin/protoc
+        unzip protoc-3.11.4-linux-x86_64.zip -d $(GITHUB_WORKSPACE)/protoc
+        echo "::add-path::$GITHUB_WORKSPACE/protoc/bin"
+        chmod +x $GITHUB_WORKSPACE/protoc/bin/protoc
         go get -u github.com/golang/protobuf/protoc-gen-go
         
     - name: Validate protobuf installation
       run: |
         echo $PATH
-        protoc -v      
+        protoc -h
       
     - name: Generate Proto
       run: |
