--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,23 +29,13 @@ jobs:
             dep ensure
         fi
         
-    - name: Get protobuf
+    - name: Set up protobuf
       run: |
         wget https://github.com/protocolbuffers/protobuf/releases/download/v3.11.4/protoc-3.11.4-linux-x86_64.zip
         unzip protoc-3.11.4-linux-x86_64.zip -d $GITHUB_WORKSPACE/protoc
         echo "::add-path::$GITHUB_WORKSPACE/protoc/bin"
         chmod +x $GITHUB_WORKSPACE/protoc/bin/protoc
         go get -u github.com/golang/protobuf/protoc-gen-go
-        
-    - name: Validate protobuf installation
-      run: |
-        echo $PATH
-        protoc -h
-      
-    - name: Generate Proto
-      run: |
-        protoc --proto_path=proto --go_out=plugins=grpc:proto commands/commands.proto
-        protoc --proto_path=proto --go_out=plugins=grpc:proto files/files.proto
 
     - name: Build
-      run: go build -v .
+      run: ./make.sh
