--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,17 +27,17 @@ jobs:
         unzip protoc-3.11.4-linux-x86_64.zip -d $GITHUB_WORKSPACE/protoc
         echo "::add-path::$GITHUB_WORKSPACE/protoc/bin"
         chmod +x $GITHUB_WORKSPACE/protoc/bin/protoc
-      
-    - name: Set up GO
-      run: |
-        go clean --modcache
-        go get -u github.com/golang/protobuf/protoc-gen-go
-        go get
         
     - name: Generate proto files
       run : |
+        go get -u github.com/golang/protobuf/protoc-gen-go
         protoc --proto_path=proto --go_out=plugins=grpc:proto commands/commands.proto
         protoc --proto_path=proto --go_out=plugins=grpc:proto files/files.proto
 
+    - name: Set up GO
+      run: |
+        go clean --modcache
+        go get
+
     - name: Prepare 
-      run: ./make.sh
+      run: go build
