--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,10 +34,5 @@ jobs:
         protoc --proto_path=proto --go_out=plugins=grpc:proto commands/commands.proto
         protoc --proto_path=proto --go_out=plugins=grpc:proto files/files.proto
 
-    - name: Set up GO
-      run: |
-        go clean --modcache
-        go get
-
-    - name: Prepare 
+    - name: Build 
       run: go build
