--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "proto"]
 	path = proto
-	url = https://gitlab.com/wojciechowskid/wncplugin-protobuf.git
+	url = https://github.com/d-wojciechowski/plm-companion-protobuf.git
