--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Generate proto files
       run : |
         go get -u github.com/golang/protobuf/protoc-gen-go
-        cat $(pwd)/commands/commands.proto
+        cat proto/commands/commands.proto
         protoc --proto_path=proto --go_out=plugins=grpc:proto commands/commands.proto
         protoc --proto_path=proto --go_out=plugins=grpc:proto files/files.proto
 
