--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -15,14 +15,18 @@ jobs:
         go-version: 1.16
       id: go
 
-    - name: Install Protoc
-      uses: arduino/setup-protoc@v1
-
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
     - name: Pull all submodules
       run: git submodule update --init --remote --merge
+
+    - name: Set up protobuf
+      run: |
+        wget https://github.com/protocolbuffers/protobuf/releases/download/v3.15.8/protoc-3.15.8-linux-x86_64.zip
+        unzip protoc-3.15.8-linux-x86_64.zip -d $GITHUB_WORKSPACE/protoc
+        echo "$GITHUB_WORKSPACE/protoc/bin" >> $GITHUB_PATH
+        chmod +x $GITHUB_WORKSPACE/protoc/bin/protoc
 
     - name: Generate proto files
       run : |
