--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -21,12 +21,8 @@ jobs:
     - name: Pull all submodules
       run: git submodule update --init --remote --merge
 
-    - name: Set up protobuf
-      run: |
-        wget https://github.com/protocolbuffers/protobuf/releases/download/v3.15.8/protoc-3.15.8-linux-x86_64.zip
-        unzip protoc-3.15.8-linux-x86_64.zip -d $GITHUB_WORKSPACE/protoc
-        echo "$GITHUB_WORKSPACE/protoc/bin" >> $GITHUB_PATH
-        chmod +x $GITHUB_WORKSPACE/protoc/bin/protoc
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v1
 
     - name: Generate proto files
       run : |
