--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -9,30 +9,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Go 1.14
-      uses: actions/setup-go@v2.0.3
+    - name: Set up Go 1.16
+      uses: actions/setup-go@v2
       with:
-        go-version: 1.14
+        go-version: 1.16
       id: go
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
-    
+
     - name: Pull all submodules
       run: git submodule update --init --remote --merge
-        
-    - name: Set up protobuf
-      run: |
-        wget https://github.com/protocolbuffers/protobuf/releases/download/v3.11.4/protoc-3.11.4-linux-x86_64.zip
-        unzip protoc-3.11.4-linux-x86_64.zip -d $GITHUB_WORKSPACE/protoc
-        echo "::add-path::$GITHUB_WORKSPACE/protoc/bin"
-        chmod +x $GITHUB_WORKSPACE/protoc/bin/protoc
-        
+
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v1
+
     - name: Generate proto files
       run : |
         go get -u github.com/golang/protobuf/protoc-gen-go
         protoc --proto_path=proto --go_out=plugins=grpc:proto commands/commands.proto
         protoc --proto_path=proto --go_out=plugins=grpc:proto files/files.proto
 
-    - name: Build 
-      run: go build
+    - name: Build
+      run: |
+        go mod download
+        go build
